--- a/CodeNotesInteractive/app/src/main/res/layout/header.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/header.xml
@@ -3,7 +3,7 @@
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:src="@drawable/header"
+           android:src="@drawable/drawer_header_image_experiment"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter">
 </ImageView>
