--- a/CodeNotesInteractive/app/src/main/res/layout/simulation_cardview.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/simulation_cardview.xml
@@ -18,8 +18,8 @@
 
         <ImageView
             android:id="@+id/card_image"
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
             android:layout_gravity="left"
             android:padding="5dp"
             android:layout_weight="1"
