--- a/CodeNotesInteractive/app/src/main/res/layout-large/fragment_compiler.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout-large/fragment_compiler.xml
@@ -6,6 +6,7 @@
 
         <SurfaceView
             android:id="@+id/surface_view"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
@@ -17,11 +18,10 @@
             android:text="No Text"
             android:textColor="@android:color/white"
             android:textSize="20sp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentRight="true" />
 
         <Button
             android:id="@+id/read_code_button"
@@ -29,9 +29,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_photo_camera_black_24dp"
+            android:layout_alignParentRight="true"
             android:background="@drawable/round_button"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:layout_marginBottom="12dp" />
 
     </RelativeLayout>
