--- a/CodeNotesInteractive/app/src/main/res/menu/action_menu.xml
+++ b/CodeNotesInteractive/app/src/main/res/menu/action_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_howto"
-        android:title="@string/howto"
+        android:title="@string/menu_tutorial"
         android:icon="@drawable/ic_howto"
         app:showAsAction="ifRoom"/>
 </menu>
