--- a/CodeNotesInteractive/app/src/main/res/values/colors.xml
+++ b/CodeNotesInteractive/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimaryLight">#ff9e80</color>
-    <color name="colorPrimary">#e65100</color>
-    <color name="colorPrimaryDark">#ac1900</color>
-    <color name="colorAccent">#26a69a</color>
+    <color name="colorPrimary">#03a9f4</color>
+    <color name="colorPrimaryDark">#0d47a1</color>
+    <color name="colorAccent">#e57373</color>
     <color name="textColorDark">#37474f</color>
     <color name="textColorMid">#455a64</color>
     <color name="textColorLight">#62727b</color>
