--- a/CodeNotesInteractive/app/src/main/res/layout/simulation_cardview.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/simulation_cardview.xml
@@ -5,10 +5,11 @@
     android:id="@+id/cardview"
     android:layout_width="fill_parent"
     android:layout_height="150dp"
-    android:layout_margin="10dp"
     android:elevation="100dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginTop="8dp"
     card_view:cardBackgroundColor="@color/cardview_initial_background"
-    card_view:cardCornerRadius="12dp">
+    card_view:cardCornerRadius="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,17 +21,17 @@
             android:id="@+id/card_image"
             android:layout_width="140dp"
             android:layout_height="140dp"
-            android:layout_gravity="left"
-            android:padding="5dp"
+            android:layout_gravity="left|center_vertical"
+            android:paddingLeft="5dp"
             android:layout_weight="1"
             android:contentDescription="@string/card_image_description" />
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
             android:layout_weight="3"
-            android:padding="5dp"
+            android:paddingLeft="5dp"
             android:orientation="vertical">
 
             <TextView
@@ -38,16 +39,18 @@
                 style="@style/CardTextName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp" />
+                android:layout_gravity="top"
+                android:paddingBottom="5dp" />
 
             <TextView
                 android:id="@+id/detail"
                 android:maxLines="5"
                 android:ellipsize="end"
                 style="@style/CardTextDetail"
+                android:layout_gravity="bottom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp" />
+                android:paddingBottom="5dp" />
 
         </LinearLayout>
     </LinearLayout>
