--- a/CodeNotesInteractive/app/src/main/res/layout/fragment_chat.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/fragment_chat.xml
@@ -62,7 +62,7 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_centerInParent="true"
-                android:src="@drawable/ic_translate" />
+                android:src="@drawable/ic_mic_white_24dp" />
         </RelativeLayout>
 
     </RelativeLayout>
