--- a/CodeNotesInteractive/app/src/main/res/layout/fragment_home.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -15,10 +16,11 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/homeCategoriesText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_margin="8dp"
+                android:clickable="true"
                 style="@style/Base.TextAppearance.AppCompat.Medium"
                 android:text="CATEGORIES"/>
 
@@ -32,10 +34,11 @@
             </android.support.v7.widget.RecyclerView>
 
             <TextView
+                android:id="@+id/homeNotesText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_margin="8dp"
+                android:clickable="true"
                 style="@style/Base.TextAppearance.AppCompat.Medium"
                 android:text="LAST NOTES"/>
 
@@ -47,10 +50,11 @@
             </FrameLayout>
 
             <TextView
+                android:id="@+id/homeLatestContentText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_margin="8dp"
+                android:clickable="true"
                 style="@style/Base.TextAppearance.AppCompat.Medium"
                 android:text="LATEST CONTENT"/>
 
