--- a/CodeNotesInteractive/app/src/main/res/layout/category_cardview.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/category_cardview.xml
@@ -6,13 +6,14 @@
     android:layout_height="180dp"
     android:layout_margin="10dp"
     android:padding="10dp"
-    android:elevation="100dp"
+    android:elevation="10dp"
     card_view:cardCornerRadius="12dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/colorPrimaryDark"
         android:weightSum="4">
 
         <ImageView
@@ -28,6 +29,7 @@
         <TextView
             android:id="@+id/categoryName"
             style="@style/CardTextName"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
