--- a/CodeNotesInteractive/app/src/main/res/layout/activity_todo_test.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/activity_todo_test.xml
@@ -19,13 +19,12 @@
 
             <LinearLayout
                 android:orientation="vertical"
-                android:background="?attr/colorPrimary"
+                android:background="@color/colorPrimaryOneToneLight"
                 android:id="@+id/editTextParentLinearLayout"
                 android:gravity="center"
-                android:layout_weight=".5"
+                android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="0dp">
-
 
                 <alpay.com.codenotesinteractive.studynotes.CustomTextInputLayout
                     android:id="@+id/toDoCustomTextInput"
@@ -33,16 +32,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     >
-                    <EditText
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/userToDoEditText"
                         android:hint="@string/title"
-                        android:lines="2"
-                        android:inputType="textAutoCorrect|textCapSentences"
-                        android:maxLines="3"
+                        android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
                         android:textColor="@color/icons"
                         android:gravity="start|bottom"
-                        android:layout_marginRight="32dp"
-                        android:layout_marginLeft="32dp"
+                        android:layout_marginRight="30dp"
+                        android:layout_marginLeft="30dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -59,7 +56,7 @@
 
                 <LinearLayout
                     android:orientation="horizontal"
-                    android:layout_weight=".5"
+                    android:layout_weight=".4"
                     android:gravity="center"
                     android:layout_marginTop="32dp"
                     android:layout_marginLeft="36dp"
