--- a/CodeNotesInteractive/app/src/main/res/layout/barcode_capture.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/barcode_capture.xml
@@ -7,11 +7,11 @@
     android:layout_height="match_parent"
     android:keepScreenOn="true">
 
-    <alpay.com.codenotesinteractive.codenotes.Components.CameraSourcePreview
+    <alpay.com.codenotesinteractive.camera.Components.CameraSourcePreview
         android:id="@+id/preview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-    </alpay.com.codenotesinteractive.codenotes.Components.CameraSourcePreview>
+    </alpay.com.codenotesinteractive.camera.Components.CameraSourcePreview>
 
 </LinearLayout>
