--- a/CodeNotesInteractive/app/src/main/res/values/colors.xml
+++ b/CodeNotesInteractive/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimaryLight">#ff9e80</color>
     <color name="colorPrimary">#03a9f4</color>
+    <color name="colorPrimaryOneToneLight">#40c4ff</color>
     <color name="colorPrimaryDark">#0d47a1</color>
     <color name="colorAccent">#e57373</color>
     <color name="textColorDark">#37474f</color>
