--- a/CodeNotesInteractive/app/src/main/res/layout/activity_todo_test.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/activity_todo_test.xml
@@ -1,163 +1,168 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:animateLayoutChanges="true"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    >
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
+    android:orientation="vertical">
 
     <android.support.design.widget.CoordinatorLayout
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:orientation="vertical"
-                android:background="@color/colorPrimaryOneToneLight"
                 android:id="@+id/editTextParentLinearLayout"
-                android:gravity="center"
-                android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="0dp">
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:background="@color/colorPrimaryOneToneLight"
+                android:orientation="vertical">
 
                 <alpay.com.codenotesinteractive.studynotes.CustomTextInputLayout
                     android:id="@+id/toDoCustomTextInput"
-                    android:gravity="center"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
+                    android:layout_height="wrap_content">
+
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/userToDoEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="30dp"
                         android:hint="@string/title"
                         android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
-                        android:textColor="@color/icons"
-                        android:gravity="start|bottom"
-                        android:layout_marginRight="30dp"
-                        android:layout_marginLeft="30dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:textColor="@color/icons" />
 
                 </alpay.com.codenotesinteractive.studynotes.CustomTextInputLayout>
 
+                <TextView
+                    android:id="@+id/takeNotesFromCameraButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:textColor="@color/white"
+                    android:clickable="true"
+                    android:text="@string/take_photo_of_notes" />
+
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/todoReminderAndDateContainerLayout"
-                android:layout_weight="1.5"
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="0dp">
+                android:layout_height="0dp"
+                android:layout_weight="1.5"
+                android:orientation="vertical">
 
 
                 <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_weight=".4"
-                    android:gravity="center"
-                    android:layout_marginTop="32dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
                     android:layout_marginLeft="36dp"
                     android:layout_marginRight="36dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp">
+                    android:layout_marginTop="32dp"
+                    android:layout_weight=".4"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
                     <ImageButton
+                        android:id="@+id/userToDoReminderIconImageButton"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight=".4"
                         android:background="@android:color/transparent"
-                        android:id="@+id/userToDoReminderIconImageButton"
                         android:padding="8dp"
-                        android:src="@drawable/ic_add_alarm_grey_200_24dp"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content" />
+                        android:src="@drawable/ic_add_alarm_grey_200_24dp" />
 
                     <TextView
+                        android:id="@+id/userToDoRemindMeTextView"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
                         android:gravity="start"
+                        android:paddingBottom="8dp"
                         android:paddingLeft="8dp"
                         android:paddingRight="8dp"
                         android:paddingTop="8dp"
-                        android:paddingBottom="8dp"
-                        android:id="@+id/userToDoRemindMeTextView"
                         android:text="@string/remind_me"
-                        android:textSize="16sp"
                         android:textColor="@color/secondary_text"
-                        android:layout_weight="2"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content" />
+                        android:textSize="16sp" />
 
                     <android.support.v7.widget.SwitchCompat
                         android:id="@+id/toDoHasDateSwitchCompat"
-                        android:layout_gravity="center"
-                        android:padding="8dp"
-                        android:gravity="center"
-                        android:layout_weight="1"
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:padding="8dp" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/toDoEnterDateLinearLayout"
-                    android:animateLayoutChanges="true"
-                    android:layout_weight="1"
                     android:layout_width="match_parent"
+                    android:layout_height="0dp"
                     android:layout_marginLeft="36dp"
                     android:layout_marginRight="36dp"
+                    android:layout_weight="1"
+                    android:animateLayoutChanges="true"
                     android:gravity="center"
-                    android:orientation="vertical"
-                    android:layout_height="0dp">
+                    android:orientation="vertical">
 
                     <LinearLayout
 
                         android:layout_width="match_parent"
-                        android:gravity="top"
+                        android:layout_height="0dp"
                         android:layout_weight="1"
-                        android:layout_height="0dp">
+                        android:gravity="top">
 
 
                         <EditText
                             android:id="@+id/newTodoDateEditText"
-                            android:gravity="center"
-                            android:textIsSelectable="false"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1.5"
                             android:focusable="false"
                             android:focusableInTouchMode="false"
-                            android:layout_weight="1.5"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content" />
-                        <TextView
-                            android:text="\@"
-                            android:padding="4dp"
-                            android:textColor="?attr/colorAccent"
                             android:gravity="center"
-                            android:layout_weight=".2"
+                            android:textIsSelectable="false" />
+
+                        <TextView
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:layout_weight=".2"
+                            android:gravity="center"
+                            android:padding="4dp"
+                            android:text="\@"
+                            android:textColor="?attr/colorAccent" />
+
                         <EditText
                             android:id="@+id/newTodoTimeEditText"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:editable="false"
                             android:focusable="false"
                             android:focusableInTouchMode="false"
                             android:gravity="center"
-                            android:textIsSelectable="false"
-                            android:editable="false"
-                            android:layout_weight="1"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content" />
-
+                            android:textIsSelectable="false" />
 
 
                     </LinearLayout>
 
                     <TextView
-                        android:layout_weight="2"
                         android:id="@+id/newToDoDateTimeReminderTextView"
-                        android:textSize="14sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="2"
                         android:gravity="start"
                         android:text="@string/remind_date_and_time"
                         android:textColor="@color/secondary_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp" />
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
@@ -168,14 +173,13 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/makeToDoFloatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:src="@drawable/ic_send_white_18dp"
-            android:layout_height="wrap_content"
-            app:layout_anchor="@id/editTextParentLinearLayout"
-            app:layout_anchorGravity="bottom|right"
             app:fabSize="normal"
-            android:layout_width="wrap_content"
-            />
+            app:layout_anchor="@id/editTextParentLinearLayout"
+            app:layout_anchorGravity="bottom|right" />
     </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
