--- a/interactiveexperiments-android/app/src/main/res/layout/activity_home.xml
+++ b/interactiveexperiments-android/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,7 @@
 
 
     <android.support.design.widget.FloatingActionButton
-        android:src="@drawable/ic_add_white_24dp"
+        android:src="@drawable/ic_add_note"
         android:id="@+id/button_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
