--- a/interactiveexperiments-android/app/src/main/res/layout/category_cardview.xml
+++ b/interactiveexperiments-android/app/src/main/res/layout/category_cardview.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/cardview"
     android:layout_width="150dp"
     android:layout_height="180dp"
     android:layout_margin="10dp"
     android:padding="10dp"
-    android:elevation="10dp"
+    android:elevation="100dp"
     card_view:cardCornerRadius="12dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/md_grey_100"
         android:weightSum="4">
 
         <ImageView
@@ -29,7 +30,7 @@
         <TextView
             android:id="@+id/categoryName"
             style="@style/CardTextName"
-            android:textColor="@color/white"
+            android:textColor="@color/textColorDark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
