--- a/interactiveexperiments-android/app/src/main/res/layout/activity_send_feedback.xml
+++ b/interactiveexperiments-android/app/src/main/res/layout/activity_send_feedback.xml
@@ -91,6 +91,14 @@
                 android:text="@string/send_text"
                 android:textColor="@color/white" />
 
+            <TextView
+                android:layout_gravity="center"
+                style="@style/FirebaseUI.Text.Link"
+                android:id="@+id/google_form_text"
+                android:text="@string/google_form_button_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
         </LinearLayout>
     </ScrollView>
 
