--- a/interactiveexperiments-android/app/src/main/res/layout/fragment_teachingcards.xml
+++ b/interactiveexperiments-android/app/src/main/res/layout/fragment_teachingcards.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="240dp"
         android:layout_margin="10dp"
-        android:src="@drawable/sample_card"/>
+        android:src="@mipmap/sample_card"/>
 
     <TextView
         android:id="@+id/result_textview"
